Fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@
 }
 
 .limit-width {
-  width: 80%;
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 10%;
+  padding-right: 10%;
+  overflow: scroll;
 }
 
 .center {
